Stuck on LocalStorage to Array Issue / Fixing tomorrow 1/7/2021

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ body {
 }
 
 .btn {
-    width: 70px;
+    width: auto;
     margin: 10px;
     padding: 5px;
 }
